netpol/netpol-1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-1 
spec:
  podSelector: 
    matchLabels:
      run: myblog
  ingress: []
