netpol/netpol-3.yaml
# all allow
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy
metadata:
  name: netpol-3 
  namespace: default
spec: 
  podSelector:
    matchLabels: 
      run: myblog
  ingress: 
  - {}
