netpol/netpol-4.yaml
# deny-traffic-from-other-namespaces 
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1 
metadata:
  namespace: default 
  name: netpol-4
spec: 
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
