netpol/netpol-5.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy
metadata:
  name: netpol-5 
spec:
  podSelector:
    matchLabels:
      run: myblog
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          stage: product
