netpol/netpol-6.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: netpol-6 
spec:
  podSelector: 
    matchLabels:
      run: myblog
  ingress:
  - ports:
    - port: 5000
    from:
    - podSelector: 
        matchLabels:
          role: watch
